package task_5;

public interface CallFactory {
    Call createCall();
}
