@startuml

title __TASK_5's Class Diagram__\n

  namespace task_5 {
    class task_5.Call {
        + callDurationSeconds : String
        + callerName : String
        + date : String
        + isReceived : boolean
        + telephoneNumber : String
        + Call()
        + Call()
        + getCallerName()
        + isReceived()
        + setCallDurationSeconds()
        + setCallerName()
        + setDate()
        + setTelephoneNumber()
        + toString()
    }
  }
  

  namespace task_5 {
    class task_5.CallDao {
        - calls : List<Call>
        + deleteByName()
        + get()
        + getAll()
        + save()
        + updateByName()
    }
  }
  

  namespace task_5 {
    interface task_5.CallFactory {
        {abstract} + createCall()
    }
  }
  

  namespace task_5 {
    interface task_5.Dao {
        {abstract} + deleteByName()
        {abstract} + get()
        {abstract} + getAll()
        {abstract} + save()
        {abstract} + updateByName()
    }
  }
  

  namespace task_5 {
    class task_5.Main {
        {static} + getCallFactory()
        {static} + main()
    }
  }
  

  namespace task_5 {
    class task_5.ReceivedCall {
        + getCallerName()
        + save()
        + setCallDurationSeconds()
        + setCallerName()
        + setDate()
        + setTelephoneNumber()
        + toString()
    }
  }
  

  namespace task_5 {
    class task_5.ReceivedCallFactory {
        + createCall()
    }
  }
  

  namespace task_5 {
    class task_5.RejectedCall {
        + getCallerName()
        + save()
        + setCallDurationSeconds()
        + setCallerName()
        + setDate()
        + setTelephoneNumber()
        + toString()
    }
  }
  

  namespace task_5 {
    class task_5.RejectedCallFactory {
        + createCall()
    }
  }
  

  task_5.Call -up-|> task_5.CallDao
  task_5.CallDao .up.|> task_5.Dao
  task_5.ReceivedCall -up-|> task_5.Call
  task_5.ReceivedCallFactory .up.|> task_5.CallFactory
  task_5.RejectedCall -up-|> task_5.Call
  task_5.RejectedCallFactory .up.|> task_5.CallFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
